# zcblive-geode

./: .clang-format  .gitignore  CMakeLists.txt  README.md  about.md  build.bat  bundle.py  changelog.md  clean.bat  mod.json  support.md
.github/workflows/: multi-platform.yml
live/: .gitignore  CMakeLists.txt  Cargo.toml  README.md
live/egui_gl_hook/: Cargo.toml
live/egui_gl_hook/examples/simple_gui/: Cargo.toml
live/egui_gl_hook/examples/simple_gui/src/: lib.rs
live/egui_gl_hook/src/: lib.rs
live/gfmod/: Cargo.toml  build.rs
live/gfmod/src/: errors.rs  lib.rs
live/src/: bot.rs  clickpack.rs  game.rs  game_manager.rs  hooks.rs  lib.rs  utils.rs
src/: main.cpp
