[package]
name = "zcblive"
version = "0.2.2"
edition = "2021"
build = "build.rs"

[lib]
crate-type = ["cdylib"] # `cdylib` for DLL, `staticlib` for Geode

[profile.release]
#lto = "fat"
#codegen-units = 1
#strip = true

[workspace]
members = [".", "egui_gl_hook", "gfmod"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
egui = "0.26.2"
egui-keybind = { version = "0.2.9", features = ["serde"] }
egui-modal = "0.3.4"
egui-toast = "0.12.1"
egui_gl_hook = { path = "egui_gl_hook" }
kittyaudio = "0.1.9"
log = "0.4.20"
once_cell = "1.19.0"
retour = { version = "0.3.1", features = ["static-detour"] }
rfd = "0.14.0"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
simple_logger = "4.3.3"
windows = { version = "0.54.0", features = ["Win32_System_Threading",
                                            "Win32_Foundation",
                                            "Win32_Security",
                                            "Win32_System_Console",
                                            "Win32_UI_WindowsAndMessaging",
                                            "Win32_Graphics",
                                            "Win32_Graphics_Gdi",
                                            "Win32_System_Diagnostics",
                                            "Win32_System_Memory",
                                            "Win32_System_Diagnostics_Debug"] }
fastrand = "2.0.1"
egui_clickpack_db = { git = "https://github.com/zeozeozeo/zcb3.git", features = ["live"] }
ureq = "2.9.6"
# gfmod = { path = "gfmod" }

[build-dependencies]
built = "0.7.1"

[features]
default = []
geode = []
